removed expansive alt-text from unrealiable request to avoid changing the layout too much

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -944,6 +944,12 @@ table .attention {
   margin-top: -1em;
   font-style: italic; }
 
+.registration img {
+  border-radius: 50%;
+  object-fit: cover;
+  width: 2em;
+  height: 2em; }
+
 /*
  * UI for anonymous meal registrations (name, email, etc.)
  */
@@ -1190,10 +1196,12 @@ section.collapsed {
     margin-top: -1em;
     font-style: italic; }
   section {
-    margin-top: 0;
-    position: static;
+    position: static !important;
+    margin: 0;
+    padding: 0;
     left: 0;
-    top: 0; }
+    top: 0;
+    padding: 0; }
   #print_instructions {
     display: block !important; } }
 
