--- a/resources/assets/sass/administration.scss
+++ b/resources/assets/sass/administration.scss
@@ -25,3 +25,10 @@ table .attention {
     margin-top: -1em;
     font-style: italic;
 }
+
+.registration img {
+    border-radius: 50%;
+    object-fit: cover;
+    width: 2em;
+    height: 2em;
+}
